Add bot configuration to disconnect at random intervals and reconnect
Add new requirement async-mutex.

Use mutexes, more async (mainly in bot.js) to prevent race conditions between motor, reconnect interval, and disconnect interval. Basically, always lock when modifying HiFiCommunicator in some way.

--- a/examples/nodejs/testingbot/package.json
+++ b/examples/nodejs/testingbot/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/highfidelity/Spatial-Audio-API-Examples#readme",
   "dependencies": {
+    "async-mutex": "^0.3.1",
     "audio-decode": "^1.4.0",
     "audio-format": "^2.3.2",
     "gyp": "^0.5.0",
