--- a/examples/nodejs/testingbot/package.json
+++ b/examples/nodejs/testingbot/package.json
@@ -23,7 +23,7 @@
     "audio-decode": "^1.4.0",
     "audio-format": "^2.3.2",
     "gyp": "^0.5.0",
-    "hifi-spatial-audio": "*",
+    "hifi-spatial-audio": "^1.2.1",
     "jose": "^3.9.0",
     "make-fetch-happen": "^8.0.13",
     "pcm-convert": "^1.6.5",
